Rtl bugs(signup alignment, swoosh for transforming knowledge) (#449)
* UAT final bug fixes

---------

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -80,7 +80,7 @@ footer ul li {
 
 .ft-social .ft-social-list:first-child {
   padding-right: 40px;
-  border-right: 1px solid var(--accent-blue-primary-60);
+  border-right: 2px solid var(--divider-on-dark-default);
   border-left: 0;
 }
 
@@ -264,7 +264,7 @@ html[dir="rtl"] .ft-main-item:not(:last-child) {
   .ft-social .ft-social-list:last-child ul {
     justify-content: center;
     padding: 32px 0 0;
-    border-top: 1px solid var(--accent-blue-primary-60);
+    border-top: 2px solid var(--divider-on-dark-default);
   }
 
   .ft-main .ft-main-item ul li a.button {
